--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,8 +1,10 @@
+$bela-dark-green: #159A2C;
 $bela-green: #0DB831;
 $bela-light-green: #D1FFD1;
 $bela-dark-gray: #636466;
 $bela-gray: #A9A9A8;
 $bela-light-gray: rgba(255,255,255,0.7);
-$bela-orange: orange;
+$bela-dark-orange: #f18014;
+$bela-orange: #FFA500;
 $bela-light-orange: #FFEDAE;
 $bela-yellow: #F0BD17;
